# Cookie-Dictionary

./: pyproject.toml
cookie_dictionary/: cookie_dictionary.py  cookie_recipes.py  main.py
